@@ -116,7 +116,7 @@ void ospf6_prefix_apply_mask (struct ospf6_prefix *op);
 void ospf6_prefix_options_printbuf (u_int8_t prefix_options,
                                     char *buf, int size);
 void ospf6_capability_printbuf (char capability, char *buf, int size);
-void ospf6_options_printbuf (char *options, char *buf, int size);
+void ospf6_options_printbuf (u_char *options, char *buf, int size);
 
 #endif /* OSPF6_PROTO_H */
 
